# resume-generator

./: .env.example  .gitignore  README.md  pyproject.toml  vercel.json
.claude/: settings.local.json
api/: index.py
app/: config.py  main.py
app/db/: init.py  models.py  session.py
app/prompts/: generate.py
app/routes/: auth.py  generate.py  llm_config.py  profile.py  runs.py
app/services/: auth.py  crypto.py  privacy.py  quota.py  resume.py
app/services/llm/: base.py  factory.py  gemini_provider.py  openai_compat.py  service.py
static/: app.js  index.html  style.css  templates.css  templates.js
tests/: conftest.py
tests/integration/: test_auth.py  test_generate.py  test_profile.py
tests/unit/: test_crypto.py  test_db_url_resolution.py  test_factory_and_auth.py  test_generate_service.py  test_privacy.py  test_providers.py  test_resume_markdown.py
