[project]
name = "resume-generator"
version = "0.1.0"
description = "Multi-user resume generator with company recommendation"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "sqlalchemy>=2.0",
  "python-dotenv>=1.0",
  "google-genai>=0.3",
  "httpx>=0.27",
  "psycopg[binary]>=3.1",
  "bcrypt>=4.1",
  "python-jose[cryptography]>=3.3",
  "cryptography>=42.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "pytest-cov>=4.1",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests/unit", "tests/integration"]
addopts = "-v --strict-markers"

[tool.coverage.run]
source = ["app/services", "app/routes"]
omit = ["app/main.py"]
